# saleor-graphql-deprecations

./: .gitignore  LICENSE  README.md  gh_manifest  index.html  localdev.py  main.py  pyproject.toml
.github/workflows/: check_schema.yml
data/: ch-20230111-194409.json  ch-20230111-195040.json  changes.json  sch-20230111-195040.json  sch-20230112-080538.json  schema-changes.json  schema-previous.json  schemas.json
saleor_deprecations/: __init__.py  data_store.py  deprecated_types.py  deprecations.py  download_schema.py  exceptions.py  json_store.py  report_gen.py  schema_diff.py  schema_download.py  schema_json.py
saleor_deprecations/templates/: enum-value.html  enum.html  index.html  input-field.html  input.html  object-field-argument.html  object-field.html  object.html  scalar.html  union.html
